[package]
name = "sentiment"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { git = "ssh://git@github.com/rsproule/risc0.git", ver = "da02f36ee90d0154fe2638c74504c78ba9cf5d13"}
serde = "1.0"
sentiment = "0.1.1"
sentiment-core = { path = "../sentiment-core" }
colored = "2.0.0"