[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = { git = "ssh://git@github.com/rsproule/risc0.git", ver = "da02f36ee90d0154fe2638c74504c78ba9cf5d13" }

[dependencies]
sentiment = "0.1.1"
risc0-zkvm = { git = "ssh://git@github.com/rsproule/risc0.git", ver = "da02f36ee90d0154fe2638c74504c78ba9cf5d13", default-features = false, features = [
    "std",
] }
sentiment-core = { path = "../../sentiment-core" }
